tests/snapshots/run_wpt_conformance__coreml_resample2d_float32_4D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
resample2d.https.any.js resample2d float32 4D tensor default options, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: resample2d

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    resample2dInput: f32[1, 1, 4, 6];
  }

  nodes {
    [resample2dOutput] = resample2d(resample2dInput, axes=[], label="", mode="", scales=[], sizes=null);
  }

  outputs { resample2dOutput; }
}
