tests/snapshots/run_wpt_conformance__coreml_reverse_float16_2D_input_with_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reverse.https.any.js",
    "reverse float16 2D input with default options",
    "coreml",
    "PASS",
)
